[package]
name = "prisma-config"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = {workspace = true, features = ["derive"]}
prisma-core = { path = "../prisma-core" }
ron = "0.8.1"
tokio = {workspace = true, features = ["fs"]}

[dev-dependencies]
serde_json = "1.0.138"
toml = "0.8.19"
