[package]
name = "prisma-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
prisma-core = { path = "../prisma-core" }
prisma-hash = { path = "../prisma-hash" }
reqwest = { version = "0.12.12", features = ["json"] }
serde = {workspace = true, features = ["derive"]}
