[package]
name = "prisma-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
machine-uid = "0.5.3"
prisma-core = { path = "../prisma-core" }
prisma-hash = { path = "../prisma-hash" }
reqwest = { version = "0.12.12", features = ["json"] }
serde = {workspace = true, features = ["derive"]}
